[project]
name = "content-mirror"
version = "1.0.0"
description = "A content mirroring service using crawl4ai"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
]

[project.scripts]
content-mirror = "crawlers.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawlers"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
